--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -31,6 +31,11 @@
   color: #d5ab55;
 }
 
+.total-review {
+  font-size: 0.9rem;
+  margin-left: 12px;
+}
+
 .card-price {
   display: flex;
   justify-content: space-between;
